<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="32dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/name"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_members"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/number_of_members"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_place"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/place"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/date_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/event_date_text_view"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/event_date_picker_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_today_black_24dp"
                    android:padding="0dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/event_time_text_view"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/event_time_picker_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_access_time_24dp"
                    android:padding="0dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/category" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/first"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/cb_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sport" />

                <RadioButton
                    android:id="@+id/cb_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Party" />

                <RadioButton
                    android:id="@+id/cb_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Education" />

                <RadioButton
                    android:id="@+id/cb_culture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Culture" />

                <RadioButton
                    android:id="@+id/cb_esport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-sport" />
            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:icon="@drawable/ic_edit_black_24dp"
                app:iconTint="@color/white" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                app:icon="@drawable/ic_delete_forever_24dp"
                app:iconTint="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    >

</LinearLayout>