...
    <string name="defaultPlace">Wrocław, Wittiga 15 Street</string>
    <string name="slash">/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="categories">Categories:</string>
    <string name="nearby">Only events from your nearby</string>
    <string name="not_take_part">Not take part</string>
    <string name="category">Category:</string>
    <string name="modify">Modify</string>
    <string name="back">Back</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
...
