...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/membersMax"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14sp" />

...
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modify_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="@string/modify"
            android:textColor="@color/white"
...
